# cppa-cl-benchmarks

./: .gitignore  CMakeLists.txt  FindLibCPPA.cmake  README.md  benchmarks.files  configure  run_benchmarks.sh
include/: cmd.hpp  kernel.hpp  util.hpp
scripts/: make_files.sh  run_benchmark.py  statistics.py  statistics.sh
src/: cmd.cpp  copy_ops_big.cpp  copy_ops_small.cpp  matrix_cppa_cl.cpp  matrix_cpu.cpp  matrix_native_cl.cpp  opencl_cppa.cpp  spawn_time.cpp  spawn_time_core.cpp  util.cpp
